appId: com.timdholmes.GiftIdeas
---
- launchApp:
    clearState: true
- extendedWaitUntil:
    visible: "Development servers"
    timeout: 5000
- tapOn: "http://localhost:8081"
- swipe:
    direction: DOWN
- tapOn: "Tim"
- tapOn: "Connect, tab, 4 of 4"
- assertVisible: "No connections yet.  Add some below!"
- tapOn:
    id: "animated-fab"
- assertVisible: "Add Connection"
- tapOn: "Email"
- inputText: "alex@example.com"
- tapOn: "Submit"
- extendedWaitUntil:
    visible: "Pending (sent by you)"
    timeout: 15000
- assertVisible: 
    id: "invitation-list-item"
    text: "alex@example.com"
- assertVisible: "Waiting for them to respond"
