appId: com.timdholmes.GiftIdeas
---
- launchApp:
    clearState: false
- tapOn: "http://localhost:8081"
- swipe:
    direction: DOWN
- tapOn: "Tim"
- assertVisible: "Welcome, Tim.\n"
